# ome2xarray

./: .gitignore  hk.pkl  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
src/ome2xarray/: companion.py
src/ome_dataarray/: companion.py
tests/: test_companion.py  test_sanitize.py
tests/resources/20250910_VV7-0-0-6-ScanSlide/: 20250910_Test4ch_2ROI_3Z_1_w1confCy5_sg1_s7.ome.tif  20250910_Test4ch_2ROI_3Z_1_w1confCy5_sg2_s5.ome.tif  20250910_Test4ch_2ROI_3Z_1_w2confmCherry_sg1_s7.ome.tif  20250910_Test4ch_2ROI_3Z_1_w2confmCherry_sg2_s5.ome.tif  20250910_Test4ch_2ROI_3Z_1_w3confGFP_sg1_s7.ome.tif  20250910_Test4ch_2ROI_3Z_1_w3confGFP_sg2_s5.ome.tif  20250910_Test4ch_2ROI_3Z_1_w4confDAPI_sg1_s7.ome.tif  20250910_Test4ch_2ROI_3Z_1_w4confDAPI_sg2_s5.ome.tif  20250910_test4ch_2roi_3z_1_sg1.companion.ome  20250910_test4ch_2roi_3z_1_sg2.companion.ome
tests/resources/n2-lin28a633_adult_2/: n2-lin28a633_adult_2.companion.ome
