[project]
authors = [{name = "Jan Eglinger", email = "jan.eglinger@fmi.ch"}]
name = "ome-dataarray"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "ome-types>=0.6.1,<0.7",
    "xarray>=2025.9.0,<2026",
    "dask>=2025.7.0,<2026",
    "tifffile>=2024.12.12,<2026",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ome_dataarray = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "py311" }
py311 = { features = ["py311", "test"], solve-group = "py311" }
py312 = { features = ["py312", "test"], solve-group = "py312" }
py313 = { features = ["py313", "test"], solve-group = "py313" }
jupyter = ["jupyter"]

[tool.pixi.feature.test.tasks]
test = "pytest --cov=src --cov-report term-missing"
cov-xml = "pytest --cov=src --cov-report xml"

[tool.pixi.feature.py311.dependencies]
python = "==3.11"

[tool.pixi.feature.py312.dependencies]
python = "==3.12"

[tool.pixi.feature.py313.dependencies]
python = "==3.13"

[tool.pixi.feature.jupyter.dependencies]
jupyter = "*"

[tool.pixi.dependencies]
xarray = ">=2025.9.0,<2026"
dask = ">=2025.7.0,<2026"
ome-types = ">=0.6.1,<0.7"
tifffile = ">=2024.12.12,<2026"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[tool.pixi.feature.test.dependencies]
pytest = ">=8.4.1,<9"
pytest-cov = ">=6.2.1,<7"
